--- a/pages/index.css
+++ b/pages/index.css
@@ -1,1 +1,25 @@
- 
+@import url(../vendor/normalize.css);
+@import url(../blocks/root/root.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__description/profile__info.css);
+@import url(../blocks/profile/__title/profile__title.css);
+@import url(../blocks/profile/__subtitle/profile__subtitle.css);
+@import url(../blocks/profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/profile/__data/profile__data.css);
+@import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/__card/elements__card.css);
+@import url(../blocks/elements/__image/elements__image.css);
+@import url(../blocks/elements/__card-caption/elements__card-caption.css);
+@import url(../blocks/elements/__title/elements__title.css);
+@import url(../blocks/elements/__like/elements__like.css);
+@import url(../blocks/footer/footer.css);
+
+
+
+* {
+  border: 1px solid palevioletred;
+} 
