--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -2,9 +2,14 @@
   max-width: 880px;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
   margin-right: auto;
   margin-left: auto;
   background: black;
   font-family: 'Inter', Arial, sans-serif;
+}
+
+@media screen and (max-width: 320px) {
+  .root{
+    max-width: 282px;
+  }
 }
