--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -5,38 +5,22 @@
   grid-auto-rows: 361px;
   grid-row-gap: 20px;
   grid-column-gap: 17px;
-  /* max-width: 880px; */
-  /* margin-top: 92px; */
   margin-left: auto;
   margin-right: auto;
   width: 100%;
 } 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 480px) {
   .elements {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
-/* @media screen and (max-width: 940px) { 
-  .profile {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    gap: 16px;
-    max-width: 720px;
-    margin-top: 88px;
-    width: 94%;
-  }
-} */
-
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 400px) {
   .elements {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(6, 1fr);
-    /* gap: 12px; */
-    max-width: 350px;
-    min-width: 288px;
-    margin-top: 64px;
-    width: 90%;
+    max-width: 282px;
+    /* width: 88%; */
   }
 }
