--- a/blocks/profile/__data/profile__data.css
+++ b/blocks/profile/__data/profile__data.css
@@ -2,3 +2,9 @@
   display: flex;
   flex-direction: row;
 }
+
+@media screen and (max-width: 480px) {
+  .profile__data {
+    flex-direction: column;
+  }
+}
