--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -6,3 +6,9 @@
   align-items: center;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 480px) {
+  .profile {
+    flex-direction: column;
+  }
+}
