--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,4 +1,21 @@
 .content {
   display: flex;
   flex-direction: column;
+  max-width: 880px;
+  flex-direction: column;
+  margin-right: auto;
+  margin-left: auto;
+  background: black;
+}
+
+@media screen and (max-width: 940px) {
+  .content {
+    max-width: 98vw;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .content{
+    max-width: 282px;
+  }
 }
