--- a/blocks/edit-form/__text-field/edit-form__text-field.css
+++ b/blocks/edit-form/__text-field/edit-form__text-field.css
@@ -4,4 +4,8 @@
   border-top: 0;
   border-left: 0;
   border-right: 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
 }
