--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,17 @@
 .footer {
-  margin-top: 66px;
-  margin-bottom: 60px;
+  margin: 66px auto 60px auto;
+  width: 100%;
+  max-width: 880px;
+}
+
+@media screen and (max-width: 940px) {
+  .footer {
+    max-width: 95vw;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .footer{
+    max-width: 282px;
+  }
 }
