--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -7,3 +7,13 @@
   font-size: 24px;
   line-height: 29px;
 }
+
+@media screen and (max-width: 400px) {
+  .popup__title {
+    margin: 0 0 45px 0;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
