--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,6 +1,13 @@
 .profile__avatar {
   max-height: 120px;
+  max-width: 120px;
   overflow: hidden;
   border-radius: 50%;
   margin-right: 24px;
+}
+
+@media screen and (max-width: 640px) {
+  .profile__avatar {
+    margin: 0;
+  }
 }
