--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -18,3 +18,11 @@
 .profile__edit-button:hover {
   opacity: 0.7;
 }
+
+@media screen and (max-width: 640px) {
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    background-size: contain;
+  }
+}
