--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -5,3 +5,9 @@
   position: relative;
   max-width: 530px;
 }
+
+@media screen and (max-width: 640px) {
+  .profile__info {
+  margin-bottom: 36px;
+  }
+}
