--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -8,12 +8,14 @@
   padding: 0;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 640px) {
   .profile__name {
     font-style: normal;
     font-weight: 500;
     font-size: 27px;
     line-height: 33px;
     text-align: center;
+    margin-top: 22px;
+    margin-bottom: 14px;
   }
 }
