--- a/blocks/edit-form/__save-button/edit-form__save-button.css
+++ b/blocks/edit-form/__save-button/edit-form__save-button.css
@@ -21,5 +21,10 @@
 
 .edit-form__save-button:hover {
   opacity: .8;
-  height: 46px;
+}
+
+@media screen and (max-width: 400px) {
+  .edit-form__save-button {
+    height: 46px;
+  }
 }
