--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,14 +1,14 @@
 .header__logo {
   max-width: 142px;
-  position: absolute;
+  /* position: absolute;
   top: 0;
-  left: 0;
+  left: 0; */
 }
 
 @media screen and (max-width: 400px) {
   .header__logo {
     max-width: 103px;
-    top: 28px;
-    left: 27px;
+    margin-top: 28px;
+    margin-left: 27px;
   }
 }
