--- a/blocks/form/__text-field/form__text-field.css
+++ b/blocks/form/__text-field/form__text-field.css
@@ -1,5 +1,5 @@
-.edit-form__text-field {
-  border-bottom: 1px #545454 solid;
+.form__text-field {
+  border-bottom: 1px rgba(0, 0, 0, .2) solid;
   padding-top: 30px;
   border-top: 0;
   border-left: 0;
