--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -7,6 +7,7 @@
   height: 32px;
   background-color: rgba(0, 0, 0, 0);
   border: none;
+  cursor: pointer;
   -webkit-transition: opacity 0.3s ease;
   -moz-transition: opacity 0.3s ease;
   -ms-transition: opacity 0.3s ease;
