--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -4,6 +4,9 @@
   overflow: hidden;
   border-radius: 50%;
   margin-right: 24px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 640px) {
