--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -4,13 +4,15 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  /* margin: 16px 0 0 0; */
+  margin: 0;
   padding: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 640px) {
   .profile__description {
-    font-style: normal;
     font-size: 14px;
     line-height: 17px;
     text-align: center;
