--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -3,9 +3,10 @@
   height: 24px;
   margin-left: 18px;
   margin-top: 15px;
-  background-image: url(../../../images/Edit_Button.png);
+  background-image: url(../../../images/Edit_Button.svg);
   border: none;
   background-color: rgba(0, 0, 0, 0);
+  cursor: pointer;
   /* position: absolute; */
   /* right: -40px;
   top: 32px; */
@@ -17,13 +18,14 @@
 }
 
 .profile__edit-button:hover {
-  opacity: 0.7;
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 640px) {
   .profile__edit-button {
     width: 18px;
     height: 18px;
+    margin-left: 10px;
     /* position: absolute; */
     background-size: contain;
     margin-top: 32px;
