--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -10,7 +10,8 @@
 
 @media screen and (max-width: 640px) {
   .profile__info {
-  margin-bottom: 36px;
+  margin-top: 0;
   margin-left: 30px;
+  margin-bottom: 33px;
   }
 }
