--- a/pages/index.css
+++ b/pages/index.css
@@ -25,10 +25,9 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__title/popup__title.css);
-@import url(../blocks/edit-form/edit-form.css);
-@import url(../blocks/edit-form/__text-field/edit-form__text-field.css);
-@import url(../blocks/edit-form/__save-button/edit-form__save-button.css);
-
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__text-field/form__text-field.css);
+@import url(../blocks/form/__save-button/form__save-button.css);
 
 
 /* * {
