--- a/blocks/form/__text-field/form__text-field.css
+++ b/blocks/form/__text-field/form__text-field.css
@@ -9,3 +9,9 @@
   font-size: 14px;
   line-height: 17px;
 }
+
+@media screen and (max-width: 400px) {
+  .form__text-field {
+    padding-bottom: 8px;
+  }
+}
