--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   margin-top: 45px;
-  border-bottom: 1px #545454 solid;
+  border-bottom: 1px rgba(84, 84, 84, .7) solid;
   max-width: 880px;
   flex-direction: column;
   margin-right: auto;
