--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -2,7 +2,7 @@
   position: absolute;
   right: -35px;
   top: -35px;
-  background-image: url(../../../images/Close_button.png);
+  background-image: url(../../../images/Close_button.svg);
   width: 32px;
   height: 32px;
   background-color: rgba(0, 0, 0, 0);
