Add some JavaScript

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -10,4 +10,6 @@
   right: 0;
   align-items: center;
   justify-content: center;
+  opacity: 0;
+  transition: visibility 1s, opacity 0.5s linear;
 }
