--- a/pages/index.css
+++ b/pages/index.css
@@ -18,6 +18,7 @@
 @import url(../blocks/elements/__card-caption/elements__card-caption.css);
 @import url(../blocks/elements/__title/elements__title.css);
 @import url(../blocks/elements/__like/elements__like.css);
+@import url(../blocks/elements/__trash/elements__trash.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
@@ -25,6 +26,8 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__image-container/popup__image-container.css);
+@import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/form/form.css);
 @import url(../blocks/form/__text-field/form__text-field.css);
 @import url(../blocks/form/__save-button/form__save-button.css);
