--- a/src/blocks/form/__save-button/form__save-button.css
+++ b/src/blocks/form/__save-button/form__save-button.css
@@ -11,6 +11,7 @@
   width: 100%;
   border-radius: 2px;
   margin: 48px 0 0 0;
+  /* padding: 48px 0 0 0; */
   border: none;
   cursor: pointer;
   -webkit-transition: opacity 0.3s ease;
@@ -21,7 +22,7 @@
 }
 
 .form__save-button:hover {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 400px) {
@@ -30,6 +31,7 @@
     font-size: 14px;
     line-height: 17px;
     margin: 46px 0 0 0;
+    /* margin: 11px 0 0 0; */
     max-width: 360px;
   }
 }
