--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -17,8 +17,10 @@
 @import url(../blocks/elements/__image/elements__image.css);
 @import url(../blocks/elements/__card-caption/elements__card-caption.css);
 @import url(../blocks/elements/__title/elements__title.css);
+@import url(../blocks/elements/__like-container/elements__like-container.css);
 @import url(../blocks/elements/__like/elements__like.css);
 @import url(../blocks/elements/__like/_active/elements__like_active.css);
+@import url(../blocks/elements/__like-counter/elements__like-counter.css);
 @import url(../blocks/elements/__trash/elements__trash.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -37,6 +39,7 @@
 @import url(../blocks/form/__input-error/_visible/form__input-error_visible.css);
 @import url(../blocks/form/__save-button/form__save-button.css);
 @import url(../blocks/form/__save-button/_disabled/form__save-button_disabled.css);
+@import url(../blocks/form/__yes-button/form__yes-button.css);
 
 /* * {
   border: 1px solid peru;
