--- a/src/blocks/profile/__name/profile__name.css
+++ b/src/blocks/profile/__name/profile__name.css
@@ -1,5 +1,5 @@
 .profile__name {
-  color: #FFFFFF;
+  color: #ffffff;
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
@@ -8,7 +8,7 @@
   padding: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 @media screen and (max-width: 640px) {
