--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,13 +1,17 @@
 .profile__avatar {
-  max-height: 120px;
-  max-width: 120px;
+  min-height: 120px;
+  min-width: 120px;
   overflow: hidden;
   border-radius: 50%;
   margin-right: 24px;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  background-size: cover;
   background-image: url("../../../images/image.jpg");
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 
 @media screen and (max-width: 640px) {
