--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -4,8 +4,8 @@
   overflow: hidden;
   border-radius: 50%;
   margin-right: 24px;
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   background-size: cover;
   background-image: url("../../../images/image.jpg");
   position: relative;
