--- a/src/blocks/elements/__like-counter/elements__like-counter.css
+++ b/src/blocks/elements/__like-counter/elements__like-counter.css
@@ -3,4 +3,8 @@
   min-height: 13px;
   border: none;
   background-color: rgba(0, 0, 0, 0);
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 16px;
+  text-align: center;
 }
