--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -8,6 +8,7 @@
   height: 100%; */
   background-size: cover;
   background-image: url("../../../images/image.jpg");
+  background-position: center;
   position: relative;
   align-items: center;
   justify-content: center;
