--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -7,7 +7,7 @@
   /* width: 100%;
   height: 100%; */
   background-size: cover;
-  background-image: url("../../../images/image.jpg");
+  /* background-image: url("../../../images/image.jpg"); */
   background-position: center;
   position: relative;
   align-items: center;
