--- a/main.css
+++ b/main.css
@@ -29,6 +29,7 @@
 .popup_opened{opacity:1;visibility:visible}
 .popup__container{align-items:center;background-color:#fff;border-radius:10px;bottom:0;box-shadow:0 0 25px rgba(0,0,0,.15);display:flex;flex-direction:column;justify-content:center;left:0;margin:auto;max-width:358px;padding:34px 36px 37px;position:relative;right:0;top:0;width:100%}@media screen and (max-width:400px){.popup__container{margin-top:123px;max-width:282px;padding:25px 22px;width:75vw}}
 .popup__close-button{background-color:transparent;background-image:url(ad98de32e342afafa118.svg);border:none;cursor:pointer;height:32px;position:absolute;right:-35px;top:-35px;transition:opacity .3s ease;width:32px}.popup__close-button:hover{opacity:.6}@media screen and (max-width:400px){.popup__close-button{background-size:contain;height:20px;right:0;width:20px}}
+.popup__confirmation-button{background-color:#000;border:none;border-radius:2px;color:#fff;cursor:pointer;font-size:18px;font-style:normal;font-weight:400;height:50px;line-height:22px;margin:10px 0 0;max-width:358px;text-align:center;transition:opacity .3s ease;width:100%}.fpopup__confirmation-button:hover{opacity:.8}@media screen and (max-width:400px){.popup__confirmation-button{font-size:14px;height:46px;line-height:17px;max-width:360px}}
 .popup__title{font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:0 0 25px;padding:0;width:100%}@media screen and (max-width:400px){.popup__title{font-size:18px;line-height:22px;margin:0 0 44px}}
 .popup__image-container{bottom:0;display:flex;flex-direction:column;left:0;position:relative;right:0;top:0}
 .popup__image{max-height:75vh;-o-object-fit:contain;object-fit:contain}@media screen and (max-width:640px){.popup__image{max-width:240px}}
@@ -40,5 +41,4 @@
 .form__input-error_visible{display:inherit}
 .form__save-button{background-color:#000;border:none;border-radius:2px;color:#fff;cursor:pointer;font-size:18px;font-style:normal;font-weight:400;height:50px;line-height:22px;margin:48px 0 0;max-width:358px;text-align:center;transition:opacity .3s ease;width:100%}.form__save-button:hover{opacity:.8}@media screen and (max-width:400px){.form__save-button{font-size:14px;height:46px;line-height:17px;margin:46px 0 0;max-width:360px}}
 .form__save-button_disabled{background-color:#fff;border:1px solid rgba(0,0,0,.15);box-shadow:rgba(0,0,0,.15);color:rgba(0,0,0,.15)}
-.form__save-button_margin{margin-top:10px}
 
