--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -23,6 +23,7 @@
 @import url(../blocks/elements/__like/_active/elements__like_active.css);
 @import url(../blocks/elements/__like-counter/elements__like-counter.css);
 @import url(../blocks/elements/__trash/elements__trash.css);
+@import url(../blocks/elements/__trash/_visible/elements__trash_visible.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
