--- a/main.css
+++ b/main.css
@@ -22,7 +22,8 @@
 .elements__like{background-color:transparent;background-image:url(87ed371465c7a6a1cd01.svg);border:none;cursor:pointer;min-height:19px;min-width:22px;transition:opacity .3s ease}.elements__like:hover{opacity:.5}
 .elements__like_active{background-image:url(fe17a515669479b1e649.svg);border:none;cursor:pointer;min-height:19px;min-width:22px}
 .elements__like-counter{background-color:transparent;border:none;font-size:13px;font-weight:400;line-height:16px;min-height:13px;min-width:10px;text-align:center}
-.elements__trash{background-color:transparent;background-image:url(cbc09a894bdd4c956365.svg);border:none;cursor:pointer;height:19px;position:absolute;right:15px;top:18px;transition:opacity .3s ease;width:18px}.elements__trash:hover{opacity:.6}
+.elements__trash{background-color:transparent;background-image:url(cbc09a894bdd4c956365.svg);border:none;cursor:pointer;display:none;height:19px;position:absolute;right:15px;top:18px;transition:opacity .3s ease;width:18px}.elements__trash:hover{opacity:.6}
+.elements__trash_visible{display:block}
 .footer{margin:66px auto 60px;max-width:880px;width:100%}@media screen and (max-width:940px){.footer{max-width:95vw}}@media screen and (max-width:400px){.footer{margin:48px auto 36px;max-width:282px}}
 .footer__copyright{color:#545454;font-size:18px;font-style:normal;font-weight:400;line-height:22px;margin:0;padding:0}@media screen and (max-width:400px){.footer__copyright{font-size:14px;line-height:17px}}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);bottom:0;display:flex;height:100%;justify-content:center;left:0;opacity:0;position:fixed;right:0;top:0;transition:visibility .3s,opacity .3s linear;-webkit-transition:visibility .3s,opacity .3s ease;-moz-transition:visibility .3s,opacity .3s ease;-ms-transition:visibility .3s,opacity .3s ease;-o-transition:visibility .3s,opacity .3s ease;visibility:hidden;width:100%}
